language-puppet (1.4.1) UNRELEASED; urgency=medium

  * Add the `with` function.

 -- Simon Marechal <simon.marechal@edf.fr>  Thu, 13 Sep 2018 15:54:03 +0200

language-puppet (1.4.0) xenial; urgency=medium

  * Now supporting megaparsec-7.0.0

 -- Simon Marechal <simon.marechal@edf.fr>  Thu, 06 Sep 2018 11:04:25 +0200

language-puppet (1.3.20.1) xenial; urgency=medium

  * Maintenance release for supporting yaml-0.10.

 -- Simon Marechal <simon.marechal@edf.fr>  Mon, 20 Aug 2018 17:52:52 +0200

language-puppet (1.3.20) xenial; urgency=medium

  * Add `length` as an alias to `size`.
  * Add the `unique` stdlib function.
  * Fix a small problem with `postgresql_acls_to_resources_hash`

 -- Simon Marechal <simon.marechal@edf.fr>  Thu, 02 Aug 2018 14:43:35 +0200

language-puppet (1.3.19.1) xenial; urgency=medium

  * Relaxed yaml version bounds

 -- Simon Marechal <simon.marechal@edf.fr>  Wed, 11 Jul 2018 09:38:28 +0200

language-puppet (1.3.19) xenial; urgency=medium

  * Added prefix and suffix functions (Fix #246)
  * Many travis/GHC fixes

 -- Simon Marechal <simon.marechal@edf.fr>  Thu, 05 Jul 2018 09:36:55 +0200

language-puppet (1.3.17) artful; urgency=medium
  * Loose upperbound for servant to include 0.13
  * Loose upperbound for exceptions to include 0.10.0
  * Fix #241

 -- Simon Marechal <bartavelle@gmail.com> UNRELEASED

language-puppet (1.3.16) artful; urgency=medium
  [ PierreR ]
  * Fix #213 Hash lookup failing in erb template

 -- Simon Marechal <bartavelle@gmail.com>  Thu, 01 Mar 2018 17:48:48 +0100

language-puppet (1.3.15) artful; urgency=medium

  * Improve parsing error messages
  * Improve source position display
  * Support OS X via filecache-0.3
  * Add ability to use the json ruby module in erbs

 -- Bartavelle <bartavelle@gmail.com>  Sun, 18 Feb 2018 20:40:57 +0100

language-puppet (1.3.14) xenial; urgency=medium

  * Allow declaring type of variables during assignment
  * The `lookup` function now fails if an input strategy is unknown