@@ -1,6 +1,7 @@
 language-puppet (1.4.1) UNRELEASED; urgency=medium
 
   * Add the `with` function.
+  * Add the `assert_type` function.
 
  -- Simon Marechal <simon.marechal@edf.fr>  Thu, 13 Sep 2018 15:54:03 +0200
 
